# ntc-netbox-plugin-metrics-ext

./: .gitignore  .pylintrc  .travis.yml  FAQ.md  LICENSE  README.md  nautobot_grafana_dashboard.json  netbox_grafana_dashboard.json  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
development/: Dockerfile  base_configuration.py  configuration.py  dev.env  docker-compose.yml  ssh_config
development/deployment_keys/: grimlock  grimlock.pub
development/example_reports/: users.py
development/netbox_v2.8.1/: configuration.py
development/netbox_v2.9-beta2/: configuration.py
nautobot_metrics_ext/: __init__.py  metrics.py
nautobot_metrics_ext/api/: __init__.py  urls.py  views.py
nautobot_metrics_ext/management/: __init__.py
nautobot_metrics_ext/management/commands/: __init__.py
nautobot_metrics_ext/tests/: __init__.py  test_endpoints.py  test_registry.py
netbox_app_metrics/: __init__.py  urls.py
netbox_app_metrics/api/: __init__.py  urls.py  views.py
netbox_app_metrics/tests/: __init__.py  test_endpoints.py  test_registry.py
netbox_metrics_ext/: __init__.py  metrics.py
netbox_metrics_ext/api/: __init__.py  urls.py  views.py
netbox_metrics_ext/management/: __init__.py
netbox_metrics_ext/management/commands/: __init__.py  rqworker_metrics.py
netbox_metrics_ext/tests/: __init__.py  test_endpoints.py  test_registry.py
